DarkIce 0.10

    o added possibility to select constant, average and variable bit rate
      encoding modes with specifying encoding quality as well.
      thanks to Nicu Pavel <npavel@ituner.com>
    o added support for Ogg Vorbis 1.0 final, removed support for rc2

09-04-2002: DarkIce 0.9.1 released

    o bugfix: a memory leak was introduced in 0.9, which is fixed thanks to
      Kristjan G. Bjarnason <kgb@gangverk.is> and Nicu Pavel <npavel@ituner.com>
    o minor documentation fix

28-03-2002: DarkIce 0.9 released

    o added possibility to simply read from the soundcard, encode, and
      save the encoded data into a local file (no streaming server needed)
    o added variable bitrate support for vorbis streams
    o support for both rc2 and rc3 versions of vorbis libraries
    o added support for resampling when encoding to vorbis
      thanks to the OSALP project for the resampling class,
      http://osalp.sourceforge.net/ and
      Julius O. Smith, <jos@ccrma.stanford.edu> for the original code

20-02-2002: DarkIce 0.8 released

    o added possibility to disable lowpass and highpass filtering for lame
    o fixed incorrect vorbis bitrate setting
    o fix: DarkIce now reports public streams correctly
      thanks to Tom Gray, <tomg@future-i.com>
    o made up-to-date with Ogg Vorbis rc3 libs
      thanks to Michael Smith, <msmith@labyrinth.net.au>
    o made up-to-date with current IceCast2 cvs version
    o added local stream dump possibility

19-10-2001: DarkIce 0.7 released

    o added support for FreeBSD
      thanks to Robin P. Blanchard, <Robin_Blanchard@gactr.uga.edu>
    o added support for resampling mp3 streams
    o DarkIce config file now may contain spaces and tabs as white space
    o configure script enables build with or without lame / Ogg Vorbis
      also possibility to specify alternate locations for these

18-09-2001: DarkIce 0.6 released

    o added support for IceCast2 server with Ogg Vorbis streaming